--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>External Sources & Product Counts</title>
+  <title>External Source</title>
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <!-- Font Awesome for arrows -->
@@ -89,8 +89,8 @@
 </head>
 <body>
   <div class="container">
-    <h1>External Sources & Product Counts</h1>
-    <button id="refreshBtn" class="btn-refresh">Refresh Now</button>
+    <h1>external Source</h1>
+    <button id="refreshBtn" class="btn-refresh">eefresh Now</button>
     <div class="card">
       <table id="sourcesTable">
         <thead>
